rust/kcl-lib/tests/object_prop_not_found/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing object_prop_not_found.kcl
---
KCL Semantic error

  × semantic: Only numbers (>= 0) can be indexes
   ╭─[2:5]
 1 │ obj = {  }
 2 │ k = obj["age"]
   ·     ─────┬────
   ·          ╰── tests/object_prop_not_found/input.kcl
   ╰────
